# dj-4led

./: COMMANDS.md  QUICKSTART.md  README.md  config.vivid.toml  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh  start_backend.sh  start_vivid.sh  test_compile.sh  test_complete_udp.sh  test_udp_basic.sh  test_udp_client.sh  tsconfig.eslint.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
apps/backend/: Cargo.toml  OPTIMIZATIONS.md  UDP_PROTOCOL.md  config.toml  test_udp.sh
apps/backend/examples/: udp_client.rs
apps/backend/src/: audio.rs  config.rs  effects.rs  fft.rs  led.rs  main.rs  websocket.rs
apps/backend/src/ehub/: mod.rs  protocol.rs  router.rs
apps/backend/src/ihub/: mod.rs  protocol.rs  router.rs
apps/backend/src/udp/: frame_processor.rs  mod.rs  protocol.rs
apps/backend/tests/: ihub_performance.rs
apps/frontend/: .eslintrc.json  biome.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/: config-examples.md
front-old/: package.json
front-old/src/: App.css  App.tsx  index.css
front/src/: App.vue
front/src-tauri/: tauri.conf.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  fft.rs  mod.rs
src-tauri/src/commands/: audio.rs  effects.rs  led.rs  mod.rs  system.rs
src-tauri/src/effects/: applaudimetre.rs  circular_wave.rs  flames.rs  heartbeat.rs  mod.rs  particle_system.rs  rain.rs  spectrum_bars.rs  starfall.rs
src-tauri/src/led/: artnet.rs  controller.rs  mod.rs
src/components/: AudioPanel.vue  AudioSpectrumPanel.vue  ColorsPanel.vue  ControlPanel.vue  DataPanel.vue  EffectsPanel.vue  Header.vue  LEDPanel.vue  Navigation.vue  PanelData.vue  PresetsPanel.vue  SystemPanel.vue  SystemStatusPanel.vue  Terminal.vue
src/composables/: useApp.ts  useAudio.ts  useColors.ts  useEffects.ts  useFrames.ts  useLED.ts  useLogs.ts  usePresets.ts  useSystem.ts
src/config/: app.ts  constants.ts  defaults.ts  index.ts
src/stores/: audio.ts  colors.ts  effects.ts  frames.ts  index.ts  led.ts  logs.ts  presets.ts  system.ts
src/types/: audio.ts  colors.ts  common.ts  effects.ts  events.ts  frames.ts  index.ts  led.ts  logs.ts  presets.ts  system.ts
(+33 files in other folders)
